@@ -22,7 +22,7 @@ describe 'svckill' do
           it { is_expected.to create_concat('/usr/local/etc/svckill.ignore') }
           it { is_expected.to create_svckill('svckill').with({
             :mode => 'warning',
-            :ignore => ["goferd", "^systemd-nspawn@.*", "systemd-bootchart", "systemd-readahead-collect", "systemd-readahead-drop", "systemd-readahead-replay", "NetworkManager", "NetworkManager-dispatcher", "NetworkManager-wait-online", "microcode", "lvm2-lvmetad", "lvm2-lvmpolld", "lvm2-monitor", "kdump", "tuned", "rsyslog", "rhel-dmesg", "^autovt@.*", "amtu", "blk-availability", "dbus.*", "getty.*", "gpm", "haldaemon", "irqbalance", "killall", "libvirt-guests", "mcstrans", "mdmonitor", "messagebus", "prefdm", "netcf-transaction", "netfs", "netlabel", "network", "ntpdate", "portreserve", "restorecond", "sandbox", "sysstat", "udev-post", "krb524", "mdmpd", "readahead_later", "lm_sensors", "kudzu", "auditd", "puppet", "puppetmaster", "crond", "sshd", "iptables", "ip6tables", "ebtables", "rc", "^pe-.*"],
+            :ignore => ["goferd", "^systemd-nspawn@.*", "systemd-bootchart", "systemd-readahead-collect", "systemd-readahead-drop", "systemd-readahead-replay", "NetworkManager", "NetworkManager-dispatcher", "NetworkManager-wait-online", "microcode", "lvm2-lvmetad", "lvm2-lvmpolld", "lvm2-monitor", "kdump", "tuned", "rsyslog", "rhel-dmesg", "^autovt@.*", "amtu", "blk-availability", "dbus.*", "getty.*", "gpm", "haldaemon", "irqbalance", "killall", "libvirt-guests", "mcstrans", "mdmonitor", "messagebus", "prefdm", "netcf-transaction", "netfs", "netlabel", "network", "ntpdate", "portreserve", "restorecond", "sandbox", "sysstat", "udev-post", "krb524", "mdmpd", "readahead_later", "lm_sensors", "kudzu", "auditd", "puppet", "puppetmaster", "crond", "sshd", "iptables", "ip6tables", "ebtables", "rc", "^pe-.*", "simp_client_bootstrap"],
           })}
 
           context 'if disabling svckill' do
@@ -39,7 +39,7 @@ describe 'svckill' do
           it { is_expected.to create_class('svckill') }
           it { is_expected.to create_svckill('svckill').with({
             :mode => 'warning',
-            :ignore => ["goferd", "^systemd-nspawn@.*", "systemd-bootchart", "systemd-readahead-collect", "systemd-readahead-drop", "systemd-readahead-replay", "NetworkManager", "NetworkManager-dispatcher", "NetworkManager-wait-online", "microcode", "lvm2-lvmetad", "lvm2-lvmpolld", "lvm2-monitor", "kdump", "tuned", "rsyslog", "rhel-dmesg", "^autovt@.*", "amtu", "blk-availability", "dbus.*", "getty.*", "gpm", "haldaemon", "irqbalance", "killall", "libvirt-guests", "mcstrans", "mdmonitor", "messagebus", "prefdm", "netcf-transaction", "netfs", "netlabel", "network", "ntpdate", "portreserve", "restorecond", "sandbox", "sysstat", "udev-post", "krb524", "mdmpd", "readahead_later", "lm_sensors", "kudzu", "auditd", "puppet", "puppetmaster", "crond", "iptables", "ip6tables", "ebtables", "rc", "^pe-.*"],
+            :ignore => ["goferd", "^systemd-nspawn@.*", "systemd-bootchart", "systemd-readahead-collect", "systemd-readahead-drop", "systemd-readahead-replay", "NetworkManager", "NetworkManager-dispatcher", "NetworkManager-wait-online", "microcode", "lvm2-lvmetad", "lvm2-lvmpolld", "lvm2-monitor", "kdump", "tuned", "rsyslog", "rhel-dmesg", "^autovt@.*", "amtu", "blk-availability", "dbus.*", "getty.*", "gpm", "haldaemon", "irqbalance", "killall", "libvirt-guests", "mcstrans", "mdmonitor", "messagebus", "prefdm", "netcf-transaction", "netfs", "netlabel", "network", "ntpdate", "portreserve", "restorecond", "sandbox", "sysstat", "udev-post", "krb524", "mdmpd", "readahead_later", "lm_sensors", "kudzu", "auditd", "puppet", "puppetmaster", "crond", "iptables", "ip6tables", "ebtables", "rc", "^pe-.*", "simp_client_bootstrap"],
           })}
         end
       end
